[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/InventoryButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/Interface.gd" type="Script" id=2]
[ext_resource path="res://ui/Fader.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/Dialogue.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/InventoryItemAnimation.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/InventoryCursor.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BottomPanel:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 150 ), Vector2( 0, 0 ) ]
}

[node name="Interface" type="Node2D"]
script = ExtResource( 2 )

[node name="BottomPanel" type="Node2D" parent="."]
position = Vector2( 0, 150 )
z_index = 1000

[node name="UIRoot" type="Control" parent="BottomPanel"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryButton1" parent="BottomPanel/UIRoot" instance=ExtResource( 1 )]
margin_left = 637.0
margin_top = 970.0
margin_right = 732.0
margin_bottom = 1050.0

[node name="InventoryButton2" parent="BottomPanel/UIRoot" instance=ExtResource( 1 )]
margin_left = 747.0
margin_top = 970.0
margin_right = 842.0
margin_bottom = 1050.0

[node name="InventoryButton3" parent="BottomPanel/UIRoot" instance=ExtResource( 1 )]
margin_left = 857.0
margin_top = 970.0
margin_right = 952.0
margin_bottom = 1050.0

[node name="InventoryButton4" parent="BottomPanel/UIRoot" instance=ExtResource( 1 )]
margin_left = 967.0
margin_top = 970.0
margin_right = 1062.0
margin_bottom = 1050.0

[node name="InventoryButton5" parent="BottomPanel/UIRoot" instance=ExtResource( 1 )]
margin_left = 1077.0
margin_top = 970.0
margin_right = 1172.0
margin_bottom = 1050.0

[node name="InventoryButton6" parent="BottomPanel/UIRoot" instance=ExtResource( 1 )]
margin_left = 1187.0
margin_top = 970.0
margin_right = 1282.0
margin_bottom = 1050.0

[node name="InterfaceAnimation" type="AnimationPlayer" parent="."]
anims/show = SubResource( 1 )

[node name="Fader" parent="." instance=ExtResource( 3 )]
visible = false

[node name="Dialogue" parent="." instance=ExtResource( 4 )]
z_index = 1000

[node name="InventoryCursor" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, -10 )

[node name="InventoryItemAnimation" parent="." instance=ExtResource( 5 )]
